--- a/src/main/resources/templates/evento/eventoFADShow.html
+++ b/src/main/resources/templates/evento/eventoFADShow.html
@@ -560,7 +560,10 @@
 										<tbody>
 											<tr th:each="sponsor, row : ${eventoWrapper.evento.sponsors}">
 												<td th:text="${sponsor.name}"></td>
-												<td><a th:href="@{|/file/${sponsor.sponsorFile.id}|}" th:text="${sponsor.sponsorFile.nomeFile}"></a></td>
+												<td th:if="${sponsor.sponsorFile != null}">
+													<a th:href="@{|/file/${sponsor.sponsorFile.id}|}" th:text="${sponsor.sponsorFile.nomeFile}"></a>
+												</td>
+												<td th:if="${sponsor.sponsorFile == null}"></td>
 											</tr>
 										</tbody>
 									</table>
