--- a/src/main/resources/templates/fragments/allegati.html
+++ b/src/main/resources/templates/fragments/allegati.html
@@ -147,12 +147,13 @@
 				case 'autocertificazioneAssenzaAziendeAlimentiPrimaInfanzia' :	tipoAllegato = 'FILE_AUTOCERTIFICAZIONE_ASSENZA_PARTECIPAZIONE_SPONSOR_INFANZIA'; break;
 				case 'importEventiDaCsvFile' :									tipoAllegato = 'FILE_EVENTI_PIANO_FORMATIVO'; break;
 				case 'requisitiHardwareSoftware' :								tipoAllegato = 'FILE_REQUISITI_HARDWARE_SOFTWARE'; break;
+				case 'relazioneFinale' :			 							tipoAllegato = 'FILE_RELAZIONE_FINALE'; break;
 
 				//File da firmare per engineering
 				case 'fileDaFirmare' :											tipoAllegato = 'FILE_DA_FIRMARE'; break;
 			}
 
-			var stato = [[${__${wrapper}__ != comunicazioneWrapper and __${wrapper}__ != pianoFormativoWrapper and __${wrapper}__ != accreditamentoWrapper and __${wrapper}__ != eventoWrapper and __${wrapper}__ != eventoWrapper?.tempPersonaEvento?.anagrafica and __${wrapper}__ != providerForm  and __${wrapper}__ != engineeringWrapper} ? ${__${wrapper}__.statoAccreditamento?.name()}]];
+			var stato = [[${__${wrapper}__ != comunicazioneWrapper and __${wrapper}__ != pianoFormativoWrapper and __${wrapper}__ != accreditamentoWrapper and __${wrapper}__ != eventoWrapper and __${wrapper}__ != eventoWrapper?.tempPersonaEvento?.anagrafica and __${wrapper}__ != providerForm  and __${wrapper}__ != relazioneAnnualeWrapper and __${wrapper}__ != engineeringWrapper} ? ${__${wrapper}__.statoAccreditamento?.name()}]];
 
 	 		var oMyForm = new FormData();
             oMyForm.append("multiPartFile", $(element)[0].files[0]);
@@ -216,6 +217,7 @@
 						case 'FILE_AUTOCERTIFICAZIONE_ASSENZA_PARTECIPAZIONE_SPONSOR_INFANZIA' :	inputName = 'autocertificazioneAssenzaAziendeAlimentiPrimaInfanzia'; break;
 						case 'FILE_EVENTI_PIANO_FORMATIVO' :										inputName = 'importEventiDaCsvFile'; break;
 						case 'FILE_REQUISITI_HARDWARE_SOFTWARE' : 									inputName = 'requisitiHardwareSoftware'; break;
+						case 'FILE_RELAZIONE_FINALE' :			 									inputName = 'relazioneFinale'; break;
 
 						//File da firmare per engineering
 						case 'FILE_DA_FIRMARE' :													inputName = 'fileDaFirmare'; break;
