Id provider in home + link portale + link faq

--- a/src/main/resources/templates/fragments/sidebarAndTop.html
+++ b/src/main/resources/templates/fragments/sidebarAndTop.html
@@ -144,6 +144,12 @@
 		              <li class="">
 					    <a target="new" href="http://wiki.3di.it/doku.php?id=documentazione_3di:progetto_ecm:indice" th:text="#{label.help}"></a>
 					  </li>
+					  <li class="">
+					    <a target="new" href="http://wiki.3di.it/doku.php?id=documentazione_3di:progetto_ecm:indice" th:text="#{label.faq}"></a>
+					  </li>
+					  <li class="">
+					    <a target="new" href="http://wiki.3di.it/doku.php?id=documentazione_3di:progetto_ecm:indice" th:text="#{label.portale}"></a>
+					  </li>
               		</ul>
 				</nav>
 			</div>
