--- a/src/main/resources/templates/fragments/sidebarAndTop.html
+++ b/src/main/resources/templates/fragments/sidebarAndTop.html
@@ -46,7 +46,8 @@
 								</a>
 								<ul class="nav child_menu" style="display: none">
 									<li><a th:href="@{/provider/accreditamento/list}" th:text="#{label.domande_accreditamento}">label.domande_accreditamento</a></li>
-									<li><a th:href="@{/provider/anagrafica/list}" th:text="#{label.anagrafiche}">label.anagrafiche</a></li>
+									<li><a th:href="@{/provider/anagrafica/list}" th:text="#{label.anagrafiche_ruoli_provider}">label.anagrafiche</a></li>
+									<li><a th:href="@{/provider/anagraficaEvento/list}" th:text="#{label.anagrafiche_ruoli_eventi}">label.anagrafiche</a></li>
 									<li><a th:href="@{/provider/pianoFormativo/list}" th:text="#{label.piano_formativo}">label.piano_formativo</a></li>
 									<li><a th:href="@{/comunicazione/dashboard}" th:text="#{label.comunicazioni}"></a></li>
 									<li><a th:href="@{/provider/evento/list}" th:text="#{label.eventi}"></a></li>
