--- a/src/main/resources/templates/comunicazione/comunicazioneList.html
+++ b/src/main/resources/templates/comunicazione/comunicazioneList.html
@@ -25,6 +25,7 @@
 									<tr>
 										<th th:text="#{label.data_ultima_risposta}"></th>
 										<th th:text="#{label.mittente}"></th>
+										<th th:text="#{label.destinatari}"></th>
 										<th th:text="#{label.ambito_list}"></th>
 										<th th:text="#{label.tipologia_list}"></th>
 										<th th:text="#{label.oggetto_list}"></th>
@@ -35,6 +36,14 @@
 									<tr th:each="comunicazione, row : ${listaComunicazioni}">
 										<td><a th:text="${#temporals.format(comunicazione.dataUltimaModifica, 'HH:mm - dd/MM/yyyy')}" th:href="@{|/comunicazione/${comunicazione.id}/show|}"></a></td>
 										<td th:text="${comunicazione.mittente.getFullName()}"></td>
+										<td>
+											<div th:each="destinatario, row : ${comunicazione.destinatari}" th:if="${row.index &lt; 3}">
+												<span th:text="${destinatario.getFullName()}"></span>
+											</div>
+											<div th:if="${#sets.size(comunicazione.destinatari) &gt; 3}">
+												<span th:text="#{label.altri_n_destinatari(${#sets.size(comunicazione.destinatari) - 3})}"></span>
+											</div>
+										</td>
 										<td th:text="${comunicazione.ambito.nome}"></td>
 										<td th:text="${comunicazione.tipologia.nome}"></td>
 										<td th:text="${comunicazione.oggetto}"></td>
